# docs

./: .gitignore  404.html  CNAME  Makefile  README.md  gemini-session.txt  index.html  mkdocs.dev.yml  mkdocs.prod.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Authentication/basic-auth-login/: index.html
Authentication/magic-token-link/: index.html
Products/BELIM/api-tutorial/: index.html
Products/DIGG/: api.yml
Products/DIGG/api-tutorial/: index.html
Products/DIVI/: api.yml
Products/DIVI/api-tutorial/: index.html
Products/DUBA/: api.yml
Products/DUBA/api-tutorial/: index.html
Products/ELIM/api-tutorial/: index.html
Products/ELIMPLUS/: api.yml
Products/ELIMPLUS/api-tutorial/: index.html
Reference/endpoints-and-infrastructure/: index.html
Reference/system-requirements/: index.html
about/: index.html
background-and-explanations/security-and-encryption/API-Usage-Guide/: index.html
background-and-explanations/security-and-encryption/Implementation-Notes/: index.html
background-and-explanations/security-and-encryption/Multi-User Secret Sharing with Zero-Knowledge Architecture/: index.html
css/: extra.css
docs/: download.md  index.md
docs/Authentication/: basic-auth-login.md  magic-token-link.md
docs/Reference/: endpoints-and-infrastructure.md  system-requirements.md
docs/Tutorials & Handbooks/: folder-sync-handbuch.md
docs/css/: extra.css
docs/js/: external-links.js
download/: index.html
how-to/folder-sync-handbuch/: index.html
overrides/: main.html
search/: search_index.json
(+33 files in other folders)
