[project]
name = "docs-vertama"
version = "1.0.0"
description = "Vertama documentation built with MkDocs"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "click<8.3.0",
]

[tool.uv]
# uv will generate uv.lock with exact versions (like Gemfile.lock)
dev-dependencies = []
